[package]
name = "vid2ss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap-markdown-dfir = "0.2.0"
image = "0.25.5"
log = "0.4.26"
rand = "0.9.0"
tempfile = "3.17.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
